Handle all kinds of ThingModifyCommand/ThingModifiedEvent/ThingModifiedCommandResponse in the same way by making use of the resource path and the entity.
Signed-off-by: Yannic Klem <Yannic.Klem@bosch.io>